bug fix: immutable list generated by list.of() cannot be concatenated