@@ -4,6 +4,8 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -23,7 +25,7 @@ public class TagXq implements Query {
     public List<Node> evaluate(Document doc) throws Exception {
         List<Node> res = this.query.evaluate(doc);
         Node node = makeElement(doc, this.tagName, res);
-        return List.of(node);
+        return new ArrayList<>(Arrays.asList(node));
     }
 
     @Override
